Fixed problem with positioning and overflow of tables in relation to navbar

--- a/public/style.css
+++ b/public/style.css
@@ -26,6 +26,7 @@
 #global-header {
   position: fixed;
   top: 0;
+  z-index: 999;
   background-color: #0b0c0c;
   width: 100%;
   border-bottom: 6px solid rgba(15, 73, 147, 0.9);
@@ -211,14 +212,16 @@
 }
 
 /* Inventory-index & table Style */
+
 #product-list {
+  /* display: block; */
   border-collapse: collapse;
   background-color: :#C6C6C6;
   overflow: hidden;
   max-width: 98%;
-  max-height: 20vh;
+  max-height: 100vh;
   margin: auto;
-  position: relative;
+  /* position: relative; */
   border-radius: 10px;
   box-shadow: 3px 5px 20px #E3E3E3;
 }
@@ -228,15 +231,18 @@ table th {
   font-family: 'Monospace', sans-serif;
   color: #373544;
   font-weight: bold;
+  /* display: block; */
 }
 table td {
   text-align: center;
   font-family: 'Open Sans', sans-serif;
   font-weight: lighter;
   color: #3B3B3B;
+  /* display: block; */
 }
 
 th, td {
+  /* display: block; */
   padding: 10px 15px;
   border-collapse: collapse;
   height: 6vh;
@@ -342,18 +348,20 @@ tr:nth-child(even) {
 }
 
 #manufacturer-list {
+  /* display: block; */
   border-collapse: collapse;
   background-color: :#C6C6C6;
   overflow: hidden;
   max-width: 100%;
   max-height: 100vh;
   margin-left: 2em;
-  position: relative;
+  /* position: relative; */
   border-radius: 10px;
   box-shadow: 3px 5px 20px #E3E3E3;
 }
 
 #manufacturer-list th, #manufacturer-list td {
+  /* display: block; */
   padding: 10px 25px;
   border-collapse: collapse;
   height: 6vh;
